circt-bc260129-000015f7/origin/error.log
bug.sv:2:9: remark: Class builtin functions (needed for randomization, constraints, and covergroups) are not yet supported and will be dropped during lowering.
  class c; endclass
        ^
bug.sv:3:5: error: 'hw.bitcast' op result #0 must be Type wherein the bitwidth in hardware is known, but got '!llvm.ptr'
  c o;
    ^
bug.sv:3:5: note: see current operation: %10 = "hw.bitcast"(%9) : (i1073741823) -> !llvm.ptr
